# Natural_Language-Date_Parser

./: Instructions.md  README.md  pyproject.toml
src/nldate/: __init__.py  parser.py
tests/: test_nldate.py
